fix mobile menu alignment

--- a/styleSheets/index.css
+++ b/styleSheets/index.css
@@ -171,6 +171,7 @@ html, body, p {
 		width: 5vw;
 		height: auto;
 		display: inline-block;
+    margin: .1em;
 	}
 
 	#menuButton .bar {
